k8s/yaml/heyburrito-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: heyburrito
  name: heyburrito
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: heyburrito
    spec:
      containers:
      - env:
        - name: BOT_NAME
          value: 'Thanks you bot'
        - name: DATABASE_DRIVER
          value: mongodb
        - name: MONGODB_DATABASE
          value: heyburrito
        - name: MONGODB_URL
          value: mongodb://mongodb:27017
        - name: SLACK_API_TOKEN
          value: {API_KEY_HERE}
        - name: SLACK_DAILY_CAP
          value: "5"
        - name: SLACK_EMOJI_INC
          value: ':green-onion:'
        - name: DM_NOTIFICATION_ENABLED
          value: 'true'
        - name: IN_CHANNEL_NOTIFICATION_ENABLED
          value: 'true'
        - name: SCOREBOARD_URL
          value: http://159.203.52.225.xip.io/
        image: jrewerts/heyburrito:v1.1.1
        name: heyburrito
        ports:
        - containerPort: 3333
        resources: {}
      restartPolicy: Always
status: {}
