k8s/yaml/heyburrito-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
    service.beta.kubernetes.io/do-loadbalancer-protocol: http
  creationTimestamp: null
  labels:
    io.kompose.service: heyburrito
  name: heyburrito
spec:
  ports:
  - name: "3333"
    port: 3333
    targetPort: 3333
  - name: "8080"
    port: 8080
    targetPort: 8080

  type: LoadBalancer
  selector:
    io.kompose.service: heyburrito
